--- a/index.html
+++ b/index.html
@@ -24,7 +24,22 @@
 <body>
     <img src="" alt="Banner (May be a carousel Over view of whole Shop)">
     <!-- Special Deals Section-->
-    <div class="Deals">  </div>
-    <div class="Ready to Eat"></div>  
+    <div class="Deals"> 
+        <ul>
+            <li><a href="">Fresh</a></li>
+            <li><a href="">10% OFF</a></li>
+            <li><a href="">Limited Offer</a></li>
+        </ul>
+    </div>
+    <div class="Ready to Eat">
+        <div><a href=""><img src="media/Tandoori Chicken Biriyani.jpg" alt=""></a><a href=""><img src="media/butter chicken biriyani.jpg" alt=""></a><a href=""><img src="media/Tandoori Chicken.jpg" alt=""></a><a href=""><img src="media/butter chicken.jpg" alt=""></a></div>
+        <div><a href=""><img src="media/Biriyani Rice.jpg" alt=""></a><a href=""><img src="media/Tandoori Drum Combo.png" alt=""></a><a href=""><img src="media/Butter Chciken Combo.png" alt=""></a><a href=""><img src="media/chickpea.jpg" alt=""></a></div>
+        <div><a href=""><img src="media/samosa.jpeg" alt=""></a><a href="media/Spring-Rolls.jpg"><img src="media/Gulab_jamun.jpg" alt=""></a><a href=""><img src="media/tea.jpeg" alt=""></a><a href=""><img src="" alt=""></a></div>
+    </div> 
+    <div>
+        Products
+        <div><a href=""><img src="media/Halal Meat.jpg" alt=""></a><a href=""><img src="media/Grocery.jpg" alt=""></a><a href=""><img src="media/Spices.jpg" alt=""></a></div>
+        <div><a href=""><img src="media/Lentils.jpg" alt=""></a><a href=""><img src="media/Snacks.jpg" alt=""></a><a href=""><img src="media/Abido.jpg.crdownload" alt="Middle Eastern"></a></div>
+    </div> 
 </body>
 </html>
