--- a/index.html
+++ b/index.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taste East</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<header>
-    logo
-    <ul>
-        <li><a href="">Deals </a></li>
-        <li><a href="">Grocery</a></li>
-        <li><a href="">Meals</a></li>
-        <li><a href="">Career</a></li>
-        <li><a href="">Contact Us</a></li>
-        <li><a href="">About Us</a></li>
-        <li><a href="">Search (Icon)</a></li>
-        <li><a href="">Favourite Icon</a></li>
-        <li><a href="">My Account</a></li>
-        <li><a href="">Cart</a></li>
-    </ul>
+<header>logo <br>
+    <nav>
+        
+        <hr>
+        <ul>
+            <li><a href="">Deals </a></li>
+            <li><a href="">Grocery</a></li>
+            <li><a href="">Meals</a></li>
+            <li><a href="">Career</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Search (Icon)</a></li>
+            <li><a href="">Favourite Icon</a></li>
+            <li><a href="">My Account</a></li>
+            <li><a href="">Cart</a></li>
+        </ul>
+        <hr>
+    </nav>
+    
 </header>
 <body>
     <img src="" alt="Banner (May be a carousel Over view of whole Shop)">
@@ -31,12 +37,12 @@
             <li><a href="">Limited Offer</a></li>
         </ul>
     </div>
-    <div class="Ready to Eat">
+    <div class="Ready_to_Eat featured_photo ">
         <div><a href=""><img src="media/Tandoori Chicken Biriyani.jpg" alt=""></a><a href=""><img src="media/butter chicken biriyani.jpg" alt=""></a><a href=""><img src="media/Tandoori Chicken.jpg" alt=""></a><a href=""><img src="media/butter chicken.jpg" alt=""></a></div>
         <div><a href=""><img src="media/Biriyani Rice.jpg" alt=""></a><a href=""><img src="media/Tandoori Drum Combo.png" alt=""></a><a href=""><img src="media/Butter Chciken Combo.png" alt=""></a><a href=""><img src="media/chickpea.jpg" alt=""></a></div>
-        <div><a href=""><img src="media/samosa.jpeg" alt=""></a><a href="media/Spring-Rolls.jpg"><img src="media/Gulab_jamun.jpg" alt=""></a><a href=""><img src="media/tea.jpeg" alt=""></a><a href=""><img src="" alt=""></a></div>
+        <div><a href=""><img src="media/samosa.jpeg" alt=""></a><a href="media/Spring-Rolls.jpg"><img src="media/Gulab_jamun.jpg" alt=""></a><a href=""><img src="media/tea.jpeg" alt=""></a><a href=""><img src="media/Rosgolla.jpg" alt=""></a></div>
     </div> 
-    <div>
+    <div class="Categories featured_photo ">
         Products
         <div><a href=""><img src="media/Halal Meat.jpg" alt=""></a><a href=""><img src="media/Grocery.jpg" alt=""></a><a href=""><img src="media/Spices.jpg" alt=""></a></div>
         <div><a href=""><img src="media/Lentils.jpg" alt=""></a><a href=""><img src="media/Snacks.jpg" alt=""></a><a href=""><img src="media/Abido.jpg.crdownload" alt="Middle Eastern"></a></div>
