--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="">Grocery</a></li>
             <li><a href="">Meals</a></li>
             <li><a href="">Career</a></li>
-            <li><a href="">Contact Us</a></li>
+            <li><a href="">Recipes</a></li>
             <li><a href="">About Us</a></li>
             <li><a href="">Search (Icon)</a></li>
             <li><a href="">Favourite Icon</a></li>
