--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </nav>
     
 </header>
-<body>
+<body> <br>
     <img src="" alt="Banner (May be a carousel Over view of whole Shop)">
     <!-- Special Deals Section-->
     <div class="Deals"> 
-        <ul>
+        <ul  >
             <li><a href="">Fresh</a></li>
             <li><a href="">10% OFF</a></li>
             <li><a href="">Limited Offer</a></li>
