--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
 </header>
 <body> <br>
-    <img src="" alt="Banner (May be a carousel Over view of whole Shop)">
+    <img id="banner" src="media/Banner.jpeg" alt="Banner (May be a carousel Over view of whole Shop)">
     <!-- Special Deals Section-->
     <div class="Deals"> 
         <ul  >
@@ -37,7 +37,7 @@
             <li><a href="">Limited Offer</a></li>
         </ul>
     </div>
-    <div class="Ready_to_Eat featured_photo ">
+    <div class="featured_photo ready_to_eat featured_photo ">
         <div><a href=""><img src="media/Tandoori Chicken Biriyani.jpg" alt=""></a><a href=""><img src="media/butter chicken biriyani.jpg" alt=""></a><a href=""><img src="media/Tandoori Chicken.jpg" alt=""></a><a href=""><img src="media/butter chicken.jpg" alt=""></a></div>
         <div><a href=""><img src="media/Biriyani Rice.jpg" alt=""></a><a href=""><img src="media/Tandoori Drum Combo.png" alt=""></a><a href=""><img src="media/Butter Chciken Combo.png" alt=""></a><a href=""><img src="media/chickpea.jpg" alt=""></a></div>
         <div><a href=""><img src="media/samosa.jpeg" alt=""></a><a href="media/Spring-Rolls.jpg"><img src="media/Gulab_jamun.jpg" alt=""></a><a href=""><img src="media/tea.jpeg" alt=""></a><a href=""><img src="media/Rosgolla.jpg" alt=""></a></div>
