--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <header>logo <br>
-    <nav class="center">
+    <nav>
         
         <hr>
         <ul>
@@ -30,7 +30,7 @@
 <body> <br>
     <img id="banner" src="media/Banner.jpeg" alt="Banner (May be a carousel Over view of whole Shop)">
     <!-- Special Deals Section-->
-    <div class="deals center"> 
+    <div class="deals"> 
         <h2>Special Deals</h2>
         <ul  >
             <div class="special fresh">
@@ -53,7 +53,7 @@
             
         </ul>
     </div>
-    <div class="featured_photo center ready_to_eat featured_photo ">
+    <div class="featured_photo ready_to_eat featured_photo ">
         <h2>Taste the Authentic Asian Food</h2>
         <div><a href=""><img src="media/Tandoori Chicken Biriyani.jpg" alt=""></a><a href=""><img src="media/butter chicken biriyani.jpg" alt=""></a><a href=""><img src="media/Tandoori Chicken.jpg" alt=""></a><a href=""><img src="media/butter chicken.jpg" alt=""></a></div>
         <div><a href=""><img src="media/Biriyani Rice.jpg" alt=""></a><a href=""><img src="media/Tandoori Drum Combo.png" alt=""></a><a href=""><img src="media/Butter Chciken Combo.png" alt=""></a><a href=""><img src="media/chickpea.jpg" alt=""></a></div>
