--- a/index.html
+++ b/index.html
@@ -60,9 +60,17 @@
         <div><a href=""><img src="media/samosa.jpeg" alt=""></a><a href="media/Spring-Rolls.jpg"><img src="media/Gulab_jamun.jpg" alt=""></a><a href=""><img src="media/tea.jpeg" alt=""></a><a href=""><img src="media/Rosgolla.jpg" alt=""></a></div>
     </div> 
     <div class="Categories featured_photo ">
-        Products
-        <div><a href=""><img src="media/Halal Meat.jpg" alt=""></a><a href=""><img src="media/Grocery.jpg" alt=""></a><a href=""><img src="media/Spices.jpg" alt=""></a></div>
-        <div><a href=""><img src="media/Lentils.jpg" alt=""></a><a href=""><img src="media/Snacks.jpg" alt=""></a><a href=""><img src="media/Abido.jpg.crdownload" alt="Middle Eastern"></a></div>
+        <h2>Products Category</h2>
+        <div>
+            <a href=""><img  title="Meat" src="media/Halal Meat.jpg" alt=""></a>
+            <a href=""><img src="media/Grocery.jpg" alt=""></a>
+            <a href=""><img src="media/Spices.jpg" alt=""></a>
+        </div>
+        <div>
+            <a href=""><img src="media/Lentils.jpg" alt=""></a>
+            <a href=""><img src="media/Snacks.jpg" alt=""></a>
+            <a href=""><img src="media/Abido.jpg.crdownload" alt="Middle Eastern"></a>
+        </div>
     </div> 
 </body>
 </html>
