--- a/index.html
+++ b/index.html
@@ -72,5 +72,9 @@
             <a href=""><img src="media/Abido.jpg.crdownload" alt="Middle Eastern"></a>
         </div>
     </div> 
+    <div class="recipe">
+        <h2>Recipes</h2>
+        
+    </div>
 </body>
 </html>
