--- a/index.html
+++ b/index.html
@@ -72,9 +72,27 @@
             <a href=""><img src="media/Abido.jpg.crdownload" alt="Middle Eastern"></a>
         </div>
     </div> 
-    <div class="recipe">
+    <div class="recipe_blog">
         <h2>Recipes</h2>
-        
+        <!-- div.recepies>div.recipe*3>img+h5+p -->
+        <div class="recepies">
+            <div class="recipe">
+                <img src="media/Tandoori Chicken.jpg" alt="">
+                <h5>Tandoori Chicekn</h5>
+                <p>How to cook Tandoori Chicken? Click here to..</p>
+            </div>
+            <div class="recipe">
+                <img src="media/butter chicken.jpg" alt="">
+                <h5>Butter Chicekn</h5>
+                <p>How to cook butter Chicken? Click here to ...</p>
+            </div>
+            <div class="recipe">
+                <img src="media/chickpea.jpg" alt="">
+                <h5>chickpea</h5>
+                <p>How to cook Cheakpeas Click here to ...</p>
+            </div>
+        </div>
+        <div> <button class="primary">See More</button></div>
     </div>
 </body>
 </html>
