Recipes Css applied

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
             </div>
             <div class="recipe">
                 <img src="media/chickpea.jpg" alt="">
-                <h5>chickpea</h5>
+                <h5>Chickpeas</h5>
                 <p>How to cook Cheakpeas Click here to ...</p>
             </div>
         </div>
-        <div> <button class="primary">See More</button></div>
+        <div> <button class="primary_button">See More</button></div>
     </div>
 </body>
 </html>
