--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="recepies">
             <div class="recipe">
                 <img src="media/Tandoori Chicken.jpg" alt="">
-                <h5>Tandoori Chicekn</h5>
+                <h5>Tandoori Chicken</h5>
                 <p>How to cook Tandoori Chicken? Click here to..</p>
             </div>
             <div class="recipe">
