--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body> <br>
     <img id="banner" src="media/Banner.jpeg" alt="Banner (May be a carousel Over view of whole Shop)">
     <!-- Special Deals Section-->
-    <div class="deals"> 
+    <div class="deals section"> 
         <h2>Special Deals</h2>
         <ul  >
             <div class="special fresh">
@@ -53,13 +53,13 @@
             
         </ul>
     </div>
-    <div class="featured_photo ready_to_eat featured_photo ">
+    <div class="section featured_photo ready_to_eat featured_photo ">
         <h2>Taste the Authentic Asian Food</h2>
         <div><a href=""><img src="media/Tandoori Chicken Biriyani.jpg" alt=""></a><a href=""><img src="media/butter chicken biriyani.jpg" alt=""></a><a href=""><img src="media/Tandoori Chicken.jpg" alt=""></a><a href=""><img src="media/butter chicken.jpg" alt=""></a></div>
         <div><a href=""><img src="media/Biriyani Rice.jpg" alt=""></a><a href=""><img src="media/Tandoori Drum Combo.png" alt=""></a><a href=""><img src="media/Butter Chciken Combo.png" alt=""></a><a href=""><img src="media/chickpea.jpg" alt=""></a></div>
         <div><a href=""><img src="media/samosa.jpeg" alt=""></a><a href="media/Spring-Rolls.jpg"><img src="media/Gulab_jamun.jpg" alt=""></a><a href=""><img src="media/tea.jpeg" alt=""></a><a href=""><img src="media/Rosgolla.jpg" alt=""></a></div>
     </div> 
-    <div class="Categories featured_photo ">
+    <div class=" section Categories featured_photo ">
         <h2>Products Category</h2>
         <div>
             <a href=""><img  title="Meat" src="media/Halal Meat.jpg" alt=""></a>
@@ -72,7 +72,7 @@
             <a href=""><img src="media/Abido.jpg.crdownload" alt="Middle Eastern"></a>
         </div>
     </div> 
-    <div class="recipe_blog">
+    <div class="recipe_blog section">
         <h2>Recipes</h2>
         <!-- div.recepies>div.recipe*3>img+h5+p -->
         <div class="recepies">
@@ -94,5 +94,8 @@
         </div>
         <div> <button class="primary_button">See More</button></div>
     </div>
+    <footer class="section">
+        
+    </footer>
 </body>
 </html>
