--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         
         <div class="footer_section ">
             <h5>Join Our Newsletter Now</h5>
-            <strong>Get E-mail updates about special plans</strong>
+            <p>Get E-mail updates about special plans</p>
             <div class="newsletter_subscription">
                 <input class="newslatter" type="text" placeholder="Enter Your Email">
                 <a href="" target="_blank"><button class="subscribe_button">Subscribe</button></a>
