--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
     
 </header>
 <body> <br>
-    <img id="banner" src="media/Banner.jpeg" alt="Banner (May be a carousel Over view of whole Shop)">
+    <!-- <img id="banner" src="media/Banner.jpeg" alt="Banner (May be a carousel Over view of whole Shop)"> -->
+    <div class="banner">
+      <b>Banner</b>
+    </div>
     <!-- Special Deals Section-->
     <div class="deals section"> 
         <h2>Special Deals</h2>
